Added base files

--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,11 @@
-<!--
+/*
 = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
 Name : index . html
 Assignment : Assignment 1
 Group members : Alvin Long
 UCIDs : 30184369
 Submission : Feb 1 , 2024
-File description : The homepage of the e-commerce website
+File description : This file will be used in the next assignment for styling. For now, you can
+create an empty file
 = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
--->
-
-<! DOCTYPE html >
-< html >
-< head >
-< title > ENSF 381 Lab 1 </ title >
-</ head >
-< body >
-<h1 > Welcome to My Webpage </ h1 >
-<p > I changed this text. </p >
-</ body >
-</ html 
+*/
